--- a/home.css
+++ b/home.css
@@ -1,5 +1,115 @@
+/* style for toolbar */
+#nav-links {
+   width: 30%;
+   height:50%;
+   color: #fff;
+   justify-content:center;
+   margin: auto;
+}  
+
+ 
 .container_header{
+    display:flex;
+    background-color:#3e3c3c;;
+    width:100%;
+    height:72px;
+    gap:50%;
+    left:0%;
+}
+
+#my-logo{
+    
+    margin-left:5%;
+    margin-top:0.3%;
+    flex-direction:left;
+    width:fit-content;
+    height:100%;
+}
+#my-logo img{
+    margin-top:3%;
+    width:fit-content;
+    height:85%;
+}
+
+#nav-lists{
+    display:flex;
+    list-style-type: none;
+ 
+}
+
+#nav-lists li a{
+    padding-left:10px;
+    padding-top:10px;
+    padding-bottom: 10px;
+    padding-right:12px;
+    width: 80px;
+    height: 40px;
+    margin-right:7px;
+     color: #fff;
+     font-family: "Inter", sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+   line-height: 133%;
+   text-align: center;
+   text-decoration: none;
+    
+}
+
+#nav-lists li a:visited #nav-lists li a:enabled{
+    background: #E05304;
+    color: #F4F1F0;
+
+    
+}
+#nav-lists li a:hover{
+    color:#F55800;
+    background:#FFF5E1;
+    border-radius: 15%;
+    
+}
+
+/* second section styles */
+
+.headline-section-container{
+   display: flex;
+     border: 2px solid #d65835;
+   width:100%;
+   height:400px;
+
+}
+
+.side-bar-menu {
+    padding-top:15%;
+    width:10%;
+    align-items:center;
+    justify-content:center;
+    border:2px solid #0f07f0;
+}
+.side-bar-menu ul{
+    list-style-type:none;
    
-    background-color:red;
+}
+.side-bar-menu ul li{
+ margin: 5%;
+}
+
+.headline-section{
+    width:50%;
+    height: 739px;
+    border: 2px solid black;
+   
+}
+
+.headline-section-image{
+   width: 40%; 
+   border: 2px solid blueviolet;
+}
+
+#first-heading{
+    font-family: "Crete Round", sans-serif;
+    font-weight: 400;
+    font-size: 90%;
+    line-height: 150%;
+    color: #f55800;
 
 }
