--- a/home.css
+++ b/home.css
@@ -1,19 +1,26 @@
-/* style for toolbar */
+/* /* style for toolbar */
+
 #nav-links {
-  width: 30%;
+  width: 50%;
   height: 50%;
   color: #fff;
   justify-content: center;
-  margin: auto;
 }
 
+#menu-icon{
+    display:none;
+}
+ 
 .container_header {
   display: flex;
   background-color: #3e3c3c;
+  justify-content:space-between;
+  align-items: center;
   width: 100%;
   height: 72px;
-  gap: 50%;
+   gap:38%; 
   left: 0%;
+  right:0%;
 }
 
 #my-logo {
@@ -41,7 +48,6 @@
   padding-right: 12px;
   width: 80px;
   height: 40px;
-  margin-right: 7px;
   color: #fff;
   font-family: "Inter", sans-serif;
   font-weight: 600;
@@ -68,14 +74,18 @@
 
 .headline-section-container {
   display: flex;
+  justify-content: space-between;
   border: 2px solid #d65835;
   width: 100%;
-  height: 400px;
+  height: 100vh;
+ background-color : #1C1A19; 
+  gap: 24px;
 }
 
 .side-bar-menu {
-  padding-top: 15%;
-  width: 10%;
+  padding-top:20%;
+  padding-left:0%;
+  width: 5%;
   align-items: center;
   justify-content: center;
   border: 2px solid #0f07f0;
@@ -83,21 +93,46 @@
 
 .side-bar-menu ul {
   list-style-type: none;
+  padding-left:20%;
+}
+.side-bar-menu ul li a {
+ color: #fff; 
+  }
+
+.side-bar-menu ul li a:hover{
+    color: #f55800;
+    background: #fff5e1;
+    border-radius: 15%;   
+}
+.side-bar-menu ul li a:visited .side-bar-menu ul li a:enabled{
+    background: #e05304;
+    color: #f4f1f0; 
 }
 
 .side-bar-menu ul li {
-  margin: 5%;
+  margin-bottom:50%;
+  
 }
 
 .headline-section {
-  width: 50%;
-  height: 739px;
-  border: 2px solid black;
+   padding-top:10%; 
+   width: 35%;
+   height:68%;
+   border: 2px solid black;
 }
 
 .headline-section-image {
-  width: 40%;
+  width:62%;
   border: 2px solid blueviolet;
+  transform:rotate(-164.51°);
+  transform-origin: top left;
+  
+}
+.headline-section-image img{
+    width:100%;
+    height:100%;
+    margin: auto;
+    
 }
 
 #first-heading {
@@ -107,3 +142,103 @@
   line-height: 150%;
   color: #f55800;
 }
+
+#primary-text{
+font-family: Crete Round,sans-serif;
+font-size: 32px;
+font-weight: 600;
+line-height:145%;
+text-align: left;
+text-transform: capitalize;
+color: #f55800;
+
+}
+
+
+#supporting-text{
+font-family: "Inter", sans-serif;
+font-weight:50;
+font-size: 30px;
+line-height: 113%;
+color: #fff;
+}
+#description{
+font-family: "Inter", sans-serif;
+font-weight: 400;
+font-size: 20px;
+line-height: 160%;
+color: #f4f5f7;
+}
+
+/* style for mobile device */
+
+@media screen and (max-width: 767px) {
+    .headline-section-container{
+        flex-direction: column;
+          }
+
+    .side-bar-menu ul li {
+      margin-bottom:0%;
+      padding-right:10%;
+    }
+    
+    
+ #nav-links{
+    display:none;
+ }
+
+ .side-bar-menu ul {
+  display:flex;
+  list-style-type: none;
+  padding-left:30%;
+}
+  
+.container_header{
+  gap:75%;
+
+}
+
+.headline-section {
+  order: 1;
+  padding-top:5%;
+  width:100%;
+  height:60%;
+  margin-top:0%;
+  border: 2px solid black;
+}
+ #nav-lists ul li{
+    display:none;
+
+ }
+
+ #menu-icon{
+    display:list-item;
+    list-style-type:none;
+  /* text-decoration: none; */
+     
+}
+  #menu-icon a i{
+  
+  color: #fff;
+
+  
+}
+ .side-bar-menu {
+   order: 2;
+    width: 100%;
+    padding-left:0%;
+    height: 5%;
+    padding-top:0% ;
+    border: 2px solid #0f07f0;
+  }
+
+  .headline-section-image {
+    order: 3;
+    width:100%;
+    height:35%;
+    border: 2px solid blueviolet;
+    
+    
+  }
+
+  }
