--- a/home.css
+++ b/home.css
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.body {
+  background: #000;
+}
+
 #menu-icon {
   display: none;
 }
@@ -96,7 +100,7 @@
 
   /* border: 2px solid #d65835; */
   width: 100%;
-  height: 100vh;
+  height: 120vh;
   background-color: #1c1a19;
   gap: 24px;
 }
