--- a/home.css
+++ b/home.css
@@ -10,9 +10,14 @@
   display: none;
 }
 
+*{
+  box-sizing: border-box; 
+}
+
 /* style for testing purpose */
 body{
-  background: #10c300;
+  margin:0%;
+  /* background: #10c300; */
 }
 
 .container_header {
@@ -48,12 +53,15 @@ body{
 
 .side-bar-menu ul li a {
   color: #fff;
+  transition-duration: 1s;
 }
 
 .side-bar-menu ul li a:hover {
-  color: #f55800;
-  background: #fff5e1;
+  /* color: #f55800; */
+  background: #f55800;
   border-radius: 15%;
+  padding:20%;
+  
 }
 
 .side-bar-menu ul li a:visited .side-bar-menu ul li a:enabled {
@@ -80,7 +88,9 @@ body{
   line-height: 133%;
   text-align: center;
   text-decoration: none;
+  transition-duration: 2s;
 }
+
 
 #nav-lists li a:hover {
   color: #f55800;
@@ -158,7 +168,7 @@ body{
   color: #f55800;
 }
 
-#supporting-text {
+#intro-supporting-text {
   font-family: "Inter", sans-serif;
   font-weight: 50;
   font-size: 30px;
@@ -177,6 +187,99 @@ body{
 
 
 /* style for works section */
+
+
+.works-header{
+  display: flex;
+  align-items: center;
+  margin-top:5%;
+
+}
+
+hr{
+  border: 1px solid black;
+}
+.see-pro-container{
+  background-image: url(image/pro-img.png);
+   background-size:cover;
+   position: relative;
+   background-position: center;
+   background-repeat: no-repeat;
+   width: 400px;
+   height: 500px;
+}
+
+.multi-post{
+  display: flex;
+  gap:2%;
+  padding-top: 8%;
+}
+
+#multi-post-supporting-text{
+  color: #091E42;
+  font-family:Inter; 
+  font-size:20px;
+  text-align:left;
+  line-height:150%;
+  margin-bottom:10%;
+  
+}
+
+
+.multi-stories{
+  gap:5%;  
+
+}
+
+.works-header h1{
+  margin-left: 15%;
+  font-size:36px;
+}
+
+#title-post{
+ 
+}
+
+.tags ul li{
+ padding: 1% 3%;
+border: 1px solid #3e3c3c;
+}
+/* tags text styles */
+ #css-tag {
+ text-transform: uppercase;
+}
+#html-tag{
+  text-transform: uppercase;
+}
+
+#bootstrap-tag {
+  text-transform:capitalize;
+}
+#ruby-tag{
+  text-transform:capitalize;
+}
+.tags ul{
+  list-style-type: none;
+   display: flex;
+   gap: 4%;
+}
+#see-pro-button{
+  padding: 10%;
+
+
+}
+
+.see-pro{
+  position: absolute;
+  bottom: 0;
+  background-color: #e05304;
+  height:10%;
+  width:100%;
+  padding-top:5%;
+  text-transform: uppercase;
+  text-align: center;
+}
+
 
 
 /* style for mobile device */
