--- a/home.css
+++ b/home.css
@@ -212,7 +212,7 @@ hr{
 .multi-post{
   display: flex;
   gap:2%;
-  padding-top: 8%;
+   padding-top: 8%; 
 }
 
 #multi-post-supporting-text{
@@ -221,24 +221,30 @@ hr{
   font-size:20px;
   text-align:left;
   line-height:150%;
-  margin-bottom:10%;
+margin-bottom:2%;
   
 }
 
 
 .multi-stories{
-  gap:5%;  
+  display: flex;
+  flex-direction: column;
+  gap:1%;  
 
 }
 
 .works-header h1{
   margin-left: 15%;
   font-size:36px;
+  text-transform: capitalize;
 }
 
 #title-post{
- 
+  font-size:24px;
+  text-transform: capitalize;
 }
+
+ 
 
 .tags ul li{
  padding: 1% 3%;
@@ -246,6 +252,8 @@ border: 1px solid #3e3c3c;
 }
 /* tags text styles */
  #css-tag {
+ 
+  margin-left: 0%;
  text-transform: uppercase;
 }
 #html-tag{
@@ -263,12 +271,19 @@ border: 1px solid #3e3c3c;
    display: flex;
    gap: 4%;
 }
-#see-pro-button{
-  padding: 10%;
-
+ 
+#see-pro-button  {
+ padding:2%;
 
 }
-
+#see-pro-button button {
+  padding: 2% 5%;
+  background-color: #e05304;
+  color: #fff;
+   border: none; 
+   text-transform: capitalize;
+ }
+ 
 .see-pro{
   position: absolute;
   bottom: 0;
@@ -297,6 +312,7 @@ border: 1px solid #3e3c3c;
     margin-bottom: 0%;
     padding-right: 10%;
   }
+  
 
   #nav-links {
     display: none;
