--- a/home.css
+++ b/home.css
@@ -193,11 +193,12 @@ body{
   display: flex;
   align-items: center;
   margin-top:5%;
-
+  grid-column: 1/4;
 }
 
 hr{
   border: 1px solid black;
+  margin-left: 2%;
 }
 .see-pro-container{
   background-image: url(image/pro-img.png);
@@ -205,14 +206,16 @@ hr{
    position: relative;
    background-position: center;
    background-repeat: no-repeat;
-   width: 400px;
-   height: 500px;
+    width: 300px;
+   height: 400px;
+   grid-column:1/2;
+
 }
 
 .multi-post{
   display: flex;
   gap:2%;
-   padding-top: 8%; 
+   grid-column: 1/4;
 }
 
 #multi-post-supporting-text{
@@ -221,7 +224,10 @@ hr{
   font-size:20px;
   text-align:left;
   line-height:150%;
-margin-bottom:2%;
+  margin-bottom:2%;
+  padding: 10%;
+  padding-left: 0%;
+  padding-top: 0%;
   
 }
 
@@ -229,7 +235,9 @@ margin-bottom:2%;
 .multi-stories{
   display: flex;
   flex-direction: column;
-  gap:1%;  
+  gap:1%; 
+  /* width:400px;
+  height: 300px;  */
 
 }
 
@@ -294,6 +302,16 @@ border: 1px solid #3e3c3c;
   text-transform: uppercase;
   text-align: center;
 }
+
+.works-section{
+  width: 80%;
+  border: 1px solid black;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 30% 30% 30%;
+  gap: 5%;
+}
+
 
 
 
