--- a/home.css
+++ b/home.css
@@ -11,7 +11,7 @@
 }
 
 *{
-  box-sizing: border-box; 
+  box-sizing: content-box;  
 }
 
 /* style for testing purpose */
@@ -189,33 +189,33 @@ body{
 /* style for works section */
 
 
-.works-header{
+.works-header {
   display: flex;
   align-items: center;
-  margin-top:5%;
   grid-column: 1/4;
+
+  margin-bottom: 0;  
+  padding-bottom: 30px; 
+
+}
+
+
+.multi-post img{
+  width:60%;
 }
 
 hr{
   border: 1px solid black;
   margin-left: 2%;
-}
-.see-pro-container{
-  background-image: url(image/pro-img.png);
-   background-size:cover;
-   position: relative;
-   background-position: center;
-   background-repeat: no-repeat;
-    width: 300px;
-   height: 400px;
-   grid-column:1/2;
-
+   
 }
 
 .multi-post{
   display: flex;
   gap:2%;
-   grid-column: 1/4;
+  grid-column: 1/4;
+  height: 70vh;
+  margin-top: 0%;
 }
 
 #multi-post-supporting-text{
@@ -224,10 +224,11 @@ hr{
   font-size:20px;
   text-align:left;
   line-height:150%;
-  margin-bottom:2%;
-  padding: 10%;
+  margin-bottom:0%;
+  padding-bottom:3%;
   padding-left: 0%;
   padding-top: 0%;
+  
   
 }
 
@@ -235,20 +236,23 @@ hr{
 .multi-stories{
   display: flex;
   flex-direction: column;
-  gap:1%; 
-  /* width:400px;
-  height: 300px;  */
+  gap:0%;
+  margin-top:0%; 
+  
 
 }
 
 .works-header h1{
-  margin-left: 15%;
+  margin-left:1%;
   font-size:36px;
   text-transform: capitalize;
+  
 }
 
-#title-post{
-  font-size:24px;
+#title-post h1{
+  margin-top: 0%;
+  padding-top:0%;
+  font-size:36px;
   text-transform: capitalize;
 }
 
@@ -282,7 +286,7 @@ border: 1px solid #3e3c3c;
  
 #see-pro-button  {
  padding:2%;
-
+  
 }
 #see-pro-button button {
   padding: 2% 5%;
@@ -291,25 +295,33 @@ border: 1px solid #3e3c3c;
    border: none; 
    text-transform: capitalize;
  }
- 
-.see-pro{
-  position: absolute;
-  bottom: 0;
-  background-color: #e05304;
-  height:10%;
-  width:100%;
-  padding-top:5%;
-  text-transform: uppercase;
-  text-align: center;
+ .works-card-contains{
+  grid-column:1/2;
+  padding:0%;
+  margin:0%;
+  height: 80%;
+   
 }
 
-.works-section{
-  width: 80%;
+.data-dashboard-container{
+  background-image:url(image/pro-img.png);
+  background-size:cover;
+  border: 2px solid chocolate;
+  grid-column:2/3;
+  height:80%;
+}
+
+
+.works-section {
+  width: 90%;
   border: 1px solid black;
   margin: auto;
   display: grid;
-  grid-template-columns: 30% 30% 30%;
-  gap: 5%;
+  grid-template-columns: 32% 32% 32%;
+  gap: 20px 50px ;  
+  padding: 1%;
+  margin-top: 20px;  
+  margin-bottom: 20px;
 }
 
 
