--- a/home.css
+++ b/home.css
@@ -137,7 +137,7 @@ body{
 }
 
 .headline-section {
-  padding-top: 10%;
+  padding-top: 4%;
   width: 35%;
   height: 75%;
 
@@ -193,10 +193,8 @@ body{
   display: flex;
   align-items: center;
   grid-column: 1/4;
-
   margin-bottom: 0;  
-  padding-bottom: 30px; 
-
+     
 }
 
 
@@ -221,14 +219,20 @@ hr{
 #multi-post-supporting-text{
   color: #091E42;
   font-family:Inter; 
-  font-size:20px;
+  font-size:16px;
   text-align:left;
   line-height:150%;
   margin-bottom:0%;
-  padding-bottom:3%;
   padding-left: 0%;
   padding-top: 0%;
+  margin-left: 0%;
    
+}
+
+.tags ul{
+  padding:0%;
+  margin-left: 0%;
+  border: 1px soild #ff0000;
 }
 
 .multi-stories{
@@ -237,9 +241,8 @@ hr{
   gap:0%;
   margin-top:0%; 
   
-
 }
-
+ 
 .works-header h1{
   margin-left:1%;
   font-size:36px;
@@ -248,10 +251,12 @@ hr{
 }
 
 #title-post h1{
-  margin-top: 0%;
+  margin: 0%;
   padding-top:0%;
+  padding-bottom:0%;
   font-size:36px;
   text-transform: capitalize;
+   
 }
 
  
@@ -262,8 +267,7 @@ border: 1px solid #3e3c3c;
 }
 /* tags text styles */
  #css-tag {
- 
-  margin-left: 0%;
+ margin-left: 0%;
  text-transform: uppercase;
 }
 #html-tag{
@@ -279,24 +283,25 @@ border: 1px solid #3e3c3c;
 .tags ul{
   list-style-type: none;
    display: flex;
-   gap: 4%;
+   gap: 2%;
 }
  
-#see-pro-button  {
- padding:2%;
-}
+ 
 #see-pro-button button {
   padding: 2% 5%;
   background-color: #e05304;
   color: #fff;
    border: none; 
    text-transform: capitalize;
+   
  }
  .works-card{
   color: #fff;
   padding:0px;
-  height: 345px; 
-
+  position: relative;
+  height: 345px;
+  padding-top:25%;
+   
 }
 
  
@@ -304,7 +309,8 @@ border: 1px solid #3e3c3c;
  grid-column:1/2;
  background-image:url(image/pro-img.png);
  background-size:cover;
- padding-top: 313px;
+ 
+
   
 }
 
@@ -315,31 +321,39 @@ border: 1px solid #3e3c3c;
   text-transform: capitalize;
   align-items: center;
   justify-content:center;
-}
    
+}
+#see-pro  {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
  
 #data-dashboard-container{
   background-image:url("image/Mask Group.png");
   background-size:cover;
   grid-column:2/3;  
-  padding-top: 40%;
+   
+
 }
 
-.works-card #see-pro-button{
+
+  #see-pro-button{
   background-color: #e05304;
   height: 15%;
    align-items: center;
    justify-content: center;
   display: flex;
   text-transform: capitalize;
-
+  padding:2%;
+  width: 50%;
 }
 
 #pro-art-container{
   background-image:url(image/pro-img.png);
   background-size:cover;
   grid-column:1/2;  
-  padding-top: 50%;
+  
 }
 
 
@@ -348,114 +362,124 @@ border: 1px solid #3e3c3c;
   background-image:url("image/Img Placeholder.png");
   background-size:cover; 
   backface-visibility: visible; 
-  padding-top: 50%;
+  
 }
 
 .works-card:hover{
   transform: scale(1.1);
   transition-duration: 3s;
+ 
 }
+
 .works-card ul li{
   list-style-type: none;
   background-color: #585656;
   padding: 5px;
-  margin: 2%;
+   margin: 2%; 
 
 }
 
 .works-card ul {
    display: flex;
-
- 
+   margin: 0%;
+   margin-bottom: 2%;
+   
+   padding: 0%;
+   justify-content: center;
+   gap:5%;
 }
 
 .works-card ul li a{
-
   text-decoration: none; 
   color: #fff;
-  
-}
+
+  }
 .works-section {
-  width: 80%;
+  width: 90%;
   border: 1px solid black;
   margin: auto;
   display: grid;
   grid-template-columns:repeat(3,30%) ;
-  gap: 20px 40px ;  
-  padding: 3%;
+  gap: 20px 3%;  
+  padding: 2%;
   margin-top: 20px;  
   margin-bottom: 20px;
-
-}
+  }
 /* about section styles  */
 .about-section {
-  height:200vh;
+  height:150vh;
   background-color:#262626;
   display: grid;
   grid-template-columns: 40% 40%;
-  row-gap:0.01%;
-  column-gap: 5%;
-  padding:5%;
-  padding-left: 15%;
+   gap: 1% 10%;
+  justify-content:center ;
+   
 
 }
 
 .about-section-content{
-  height: 400px;
+  height: 350px;
+  
 }
 
 #horizontal-line{
   grid-column: 1/3;
-  height:1px;
+  width: 100%;
+  padding: 0%;
+  height:20px;
+  padding-left: 10%;
+  
 }
  
 /* about-img-part */
 #frame-img img{
-  width: 500px;
-  height: 400px;
+  width: 100%;
+  height: 350px;
 }
 
 /* about-text-container */
 #about-text{
-  border: 2px solid #c20a0a;
+   
   grid-column:1/2;
   color: #fff;
-   padding-left: 10%;
-   padding-bottom: 10%;
+  padding-bottom: 10%;
+  line-height:150%;
+ 
   
+
 }
+
 #about{
   text-transform: capitalize;
-  font-size: 24px;
+  font-size: 30px;
   color: #f55800;
+  align-items: center;
 }
 #get-my-resume-button button{
   padding: 3%;
   background-color:#f55800;
   border: none;
+
 }
 #about-section-list{
  display: flex;
- gap: 26%;
  grid-column: 1/3;
- border: 2px solid cornflowerblue;
  color: #fff;
-  height:300px;
-  padding:5%;
+ height:300px;
+ justify-content: space-around;
 }
 
-#language  h2{
-  padding: 10%;
+.experience {
+  
+ display: flex;
+ flex-direction: column;
+ width: 30%;
 }
-#frameworks h2{
-  padding: 10%;
-}
-#skills h2{
-  padding: 10%;
-}
+
+ 
 #about-section-list ul{
   list-style-type: none;
-  align-items: center;
+   padding-left: 0%;
 }
 
 /* style for mobile device */
@@ -467,7 +491,10 @@ border: 1px solid #3e3c3c;
     gap: 0%;
     height: 100%;
     overflow: hidden;
+  
   }
+
+  
 
   .side-bar-menu ul li {
     margin-bottom: 0%;
@@ -537,4 +564,56 @@ border: 1px solid #3e3c3c;
     transform: rotate(-12deg);
     height: 100%;
   }
+   /* mobile version  work and about */
+  .works-section {
+    display: flex;
+    flex-direction: column;
+  
+  }
+  
+  .works-card {
+    width: 100%;  
+    margin-bottom: 2% ;  
+  }
+
+  .multi-post{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+  }
+  .multi-post img{
+    width: 100%; /* Make the image take full width */
+    height: auto; 
+  }
+
+  .about-section {
+    display: flex;
+    flex-direction: column;
+    height: 300vh; 
+    
+  }
+
+  #frame-img img {
+    width: 100%; /* Make the image take full width */
+    height: auto; /* Preserve aspect ratio */
+  }
+
+  #about-text {
+    text-align: center;  
+  }
+    
+  #about-section-list {
+    display: flex;
+    flex-direction: column; /* Stack list items vertically */
+    align-items: center; /* Center-align list items */
+    height: auto;
+  }
+  .works-header{
+    display: flex;
+    flex-direction: column; /* Stack list items vertically */
+    align-items: center;
+  }
+
+
 }
