--- a/home.css
+++ b/home.css
@@ -443,9 +443,101 @@ hr {
   padding-left: 0%;
 }
 
-/* style for mobile device */
+ /* style for contact forms */
+ .contact-forms{
+  display: flex;
+  height: 120vh;
+  gap: 1% 5%;
+  align-items: center;
+  flex-wrap: wrap;
+ 
+ }
 
-@media screen and (max-width: 767px) {
+ .contact-form-content{
+  height: 50%;
+ }
+ #contact-text{
+ width: 40%;
+ font-size: 30px;
+  border: 2px solid red;
+}
+
+ .contact-form{
+  width:100%;
+ }
+ #form-container
+{
+  display: flex;
+  justify-content: center;
+  width: 55%;
+  border: 2px solid red;
+  padding: 0%;
+  
+}
+
+.form-row {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.form-group {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.full-width {
+  flex: 2;
+}
+
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#contact-textarea{
+  height: 20vh;
+  }
+
+input[type="submit"] {
+  width: 30%;
+  padding: 10px;
+  background-color: #f55800;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+.contact-adress-links{
+  border: 2px solid rgb(13, 0, 255);
+  flex-basis:100%;
+  height: 10%;
+  position: relative;
+  bottom: 0;
+  display: flex;
+   
+
+}
+
+.contact-adress-links ul{
+   display: flex;
+   gap: 70%;
+   margin-left: 35%;
+   list-style-type: none;
+}
+
+ /* style for mobile device */
+
+ @media screen and (max-width: 767px) {
   .headline-section-container {
     flex-direction: column;
     position: relative;
@@ -571,5 +663,14 @@ hr {
     display: flex;
     flex-direction: column; /* Stack list items vertically */
     align-items: center;
+    
   }
+
+  .works-header hr{
+   margin-left:10%;
+   width:80%;
+  }
+
+
+     
 }
